--- a/home/s9724/www/assets/templates/default/css/app.css
+++ b/home/s9724/www/assets/templates/default/css/app.css
@@ -3302,16 +3302,13 @@ body.home .header-bottom .container{
 }
 
 .logo img{
-  display: inline-block;
-  float: left;
-  width: 25%;
+    display: inline-block;
+    float: left;
+    width: 70%;
 }
 
 .logo-text{
   display: inline-block;
-  float: right;
-  width: 75%;
-  padding-left: 45px;
   padding-top: 7px;
 }
 
@@ -3326,6 +3323,7 @@ body.home .header-bottom .container{
 }
 
 .logo-text__desc{
+  font-size: 0.9rem;
   display: inline-block;
   margin-top: 4px;
   line-height: 1.5;
