--- a/home/s9724/www/assets/templates/default/css/app.css
+++ b/home/s9724/www/assets/templates/default/css/app.css
@@ -3814,7 +3814,7 @@ body.home .header-bottom .container{
 }
 
 .card__title{
-  display: inline-block;
+  display: block;
   min-height: 40px;
   color: #634426;
   font-family: "Lora", serif;
